--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
     "noEmit": true,
     "jsx": "react-jsx"
   },
